bin/testsuite/tests/compiler/src/errors/compiler4579.swg
#global testerror "Err0078"
#[Min(0)]
func toto() {}
